--- a/BrandNewPurchaseOptions/BrandNewPurchaseOptions/appsettings.json
+++ b/BrandNewPurchaseOptions/BrandNewPurchaseOptions/appsettings.json
@@ -2,7 +2,7 @@
   "TestConfig": {
     "SiteUrl": "https://subline-test.artsrn.ualberta.ca/portals/edit/",
     "TestEventId": 54,
-    "UserName": "arcguya@gmail.com",
-    "Password": "water4sealion"
+    "UserName": "saleh.mdreazus@gmail.com",
+    "Password": "Re@z.1617432"
   }
 }
